--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -4,7 +4,8 @@
   width: 400px;
   height: 300px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
