--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -22,7 +22,8 @@ body {
 .block {
   display: flex;
   justify-content: space-evenly;
-  align-items: ;
+  align-items: center;
+  gap: 10px;
 }
 
 .profile-image {
@@ -56,4 +57,8 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0%;
+  margin: 0;
+  display: flex;
+  gap: 15px;
 }
