--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,18 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  justify-items: center;
+}
+
+.items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pairs {
+  box-sizing: border-box;
+  width: 200px;
+  justify-content: center;
 }
 
 /* do not edit this footer */
