--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,18 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  justify-items: center;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 .items {
   display: flex;
   justify-content: space-between;
+  gap: 52px;
 }
 
 .pairs {
   box-sizing: border-box;
-  width: 200px;
-  justify-content: center;
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
