--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+div.top-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+div.text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .modal {
@@ -20,6 +32,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  display: flex;
+  gap: 15px;
+}
+
+.header {
+  font-size: large;
+  font-weight: bold;
 }
 
 .icon {
@@ -31,6 +51,7 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
 }
@@ -44,6 +65,7 @@ body {
   height: 24px;
   width: 24px;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
 }
